[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/player/PlayerClone.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.6

[sub_resource type="CylinderShape" id=3]
height = 0.4
radius = 0.5

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.294118 )

[sub_resource type="CapsuleMesh" id=4]
material = SubResource( 5 )
radius = 0.5
mid_height = 1.6
radial_segments = 16

[node name="PlayerClone" type="KinematicBody" groups=["PlayerClone"]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.07, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 4 )

[node name="WallrunLeft" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )
enabled = true
cast_to = Vector3( -0.7, 0, 0 )

[node name="WallrunRight" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )
enabled = true
cast_to = Vector3( 0.7, 0, 0 )

[node name="TrailPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0 )
